@@ -1,3 +1,8 @@
+2019-08-12 Philipp Klaus Krause <pkk AT spth.de>
+
+	* sdas/aspdk13/pdk13mch.c:
+	  Bit instruction fixes by Free-PDK.
+
 2019-07-24 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
